# phoenix-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.timescaledb  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  verify.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/workflows/: ci.yml
data/: fx_rates  master_company_list.csv
database/: schema.sql
database/init/: 10_schema.sql  15_extensions.sql  20_seed_data.sql  30_views.sql  31_analytics_views.sql  35_business_logic.sql  40_graph_setup.sql  99_final.sql
database/migrations_archive/: 006_postgis_business_logic.sql
database/seeds/: 001_populate_data_sources.sql
db_init/: 01_schema.sql
docs/: USER_GUIDE.md  architecture.md
docs/_archive/context_files/: CLAUDE_CODE_CONTEXT.md
frontend/: Dockerfile  app.py  requirements.txt
scripts/: ingest_foundational_data.sh  verify_nov8_fix.sh
src/: backfill.py
src/chronos/config/: settings.py
src/chronos/database/: connection.py
src/chronos/ingestion/: base.py  fred.py  valet.py
src/chronos/utils/: exceptions.py  logging.py
src/scripts/: generate_embeddings.py  ingest_fred.py  ingest_valet.py
tests/: conftest.py
tests/unit/: test_connection.py
